spacing issues fixed

--- a/style.css
+++ b/style.css
@@ -331,7 +331,7 @@ section h2 {
 
 /* Education Section styles */
 
-#education {
+#education, #work {
   padding-top: 2rem;
 }
 
@@ -343,7 +343,7 @@ section h2 {
   text-align: center;
   font-weight: 300;
   position: relative;
-  bottom: -100vh;
+  bottom: -10vh;
 }
 
 /* Steps Homepage Styles */
@@ -542,6 +542,12 @@ span[id$="display"] {
   }
   .grid-2.reverse-order .grid-item:nth-child(1) {
     order: 1;
+  }
+  #footer {
+    bottom: -90vh;
+  }
+  .education #footer {
+    bottom: -50vh;
   }
 }
 
